Implementing comarca list
